# geometryProject

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TP.md
include/: Application.hpp  MouseInteractorStylePP.hpp  Tools.hpp  deformations.hpp  fileIO.hpp  harmonicFn.hpp
src/: Application.cpp  CMakeLists.txt  MouseInteractorStylePP.cpp  Tools.cpp  deformations.cpp  draw.cpp  fileIO.cpp  harmonicFn.cpp  main.cpp
src/vtkImGuiAdapter/: CMakeLists.txt  vtkImGuiSDL2OpenGLRenderWindow.cxx
